# ngao-lim

./: Cargo.toml  notes.md
.sqlx/: query-3e3826020a3b68fb73823021ac21748a8dd19c832b7dc49b36f6475a1593331e.json  query-d4cf44d050aa3add7a95ff36ebcba9045371e13b30ec43557e8507fda95a60d1.json
migrations/: 20240701192852_init.sql  20240802110837_trigger_cdc.sql
src/: errors.rs  kafka.rs  main.rs  queries.rs  routing.rs  state.rs
